// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse demo -- collapse 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3357df;
}

.c7:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c8 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c7 .c13 {
  left: 100%;
  margin-left: -19px;
}

.c7 .c15 {
  background: #4cd964;
}

.c7 .c12 {
  display: none;
}

.c20 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.c24 {
  vertical-align: baseline;
}

.c19 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.c19 > * {
  font-size: 12px;
}

.c19 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 16px;
  height: 16px;
  border: 1px solid #0a1633;
  border-radius: 2px;
  vertical-align: middle;
}

.c19 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c19 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c19:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.c19.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c19.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.c19.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c19.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.c19.uc-fe-checkbox-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c19.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c19.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c19.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.c19.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c19.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: none;
}

.c17 .c18,
.c17 .style__CheckboxCardWrap-sc-19o5x2n-1 {
  margin-right: 8px;
}

.c17 .c18:last-child,
.c17 .style__CheckboxCardWrap-sc-19o5x2n-1:last-child {
  margin-right: 0;
}

.c27 {
  position: relative;
}

.c29 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c23 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.c23:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c21 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  height: 28px;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.c21 .c28 {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c21 .c28::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21 .c28::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21 .c28:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21 .c28::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c21:hover {
  border-color: #c3cad9;
}

.c21 .c26 {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.c21 .c26:hover {
  background: #f6f6fb;
}

.c21 .c28 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c21 .c22,
.c21 .c25 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c21 .c22:hover,
.c21 .c25:hover {
  color: #3860f4;
}

.c21 .c22 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c21 .c25 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        multiple
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          checked=""
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        openKeys
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="uc-fe-checkbox-group c17"
        >
          <span
            checked=""
            class="uc-fe-checkbox uc-fe-checkbox-checked c18 c19"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c20"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              0
            </span>
          </span>
          <span
            class="uc-fe-checkbox c18 c19"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c20"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              1
            </span>
          </span>
          <span
            class="uc-fe-checkbox c18 c19"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c20"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              2
            </span>
          </span>
          <span
            class="uc-fe-checkbox c18 c19"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c20"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              3
            </span>
          </span>
          <span
            class="uc-fe-checkbox c18 c19"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c20"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              4
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        panelCount
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c21"
        >
          <div>
            <span
              class="c22 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c23"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c24"
              />
            </span>
            <span
              class="c25 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c23"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c24"
              />
            </span>
          </div>
          <div
            class="c26 uc-fe-numberinput-input-wrap c27"
          >
            <input
              autocomplete="off"
              class="c28 uc-fe-numberinput-input c29"
              min="1"
              step="1"
              value="5"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 0
        </div>
        <div
          class=""
          open=""
        >
          content 0
        </div>
      </div>
      <div>
        <div>
          panel 1
        </div>
      </div>
      <div>
        <div>
          panel 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
      </div>
      <div>
        <div>
          panel 4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- collapse-multiple 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        panel 1
      </div>
      <div
        class=""
        open=""
      >
        content 1
      </div>
    </div>
    <div>
      <div>
        panel 2
      </div>
      <div
        class=""
        open=""
      >
        content 2
      </div>
    </div>
    <div>
      <div>
        panel 3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        panel 1
      </div>
    </div>
    <div>
      <div>
        panel 2
      </div>
      <div
        class=""
        open=""
      >
        content 2
      </div>
    </div>
    <div>
      <div>
        panel 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- collapse-uncontrolled 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 1
        </div>
      </div>
      <div>
        <div>
          panel 2
        </div>
        <div
          class=""
          open=""
        >
          content 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
        <div
          class=""
          open=""
        >
          content 3
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 1
        </div>
      </div>
      <div>
        <div>
          panel 2
        </div>
        <div
          class=""
          open=""
        >
          content 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
        <div
          class=""
          open=""
        >
          content 3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3357df;
}

.c7:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c8 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c7 .c13 {
  left: 100%;
  margin-left: -19px;
}

.c7 .c15 {
  background: #4cd964;
}

.c7 .c12 {
  display: none;
}

.c17 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c17:hover {
  border-color: #3357df;
}

.c17:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c17 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c17 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c17 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c17 .c10,
.c17 .c12 {
  line-height: 16px;
}

.c17 .c10 {
  padding-right: 20px;
}

.c17 .c12 {
  padding-left: 20px;
}

.c17 .c10 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        open
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          checked=""
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c17"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        customTitle
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c17"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel title
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-customTitle 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <div>
    <div>
      <div
        style="border:1px solid #ccc;height:28px;line-height:28px;padding:10px;"
      >
        title
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
          style="float:right;"
          type="button"
        >
          toggle
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-disabled 1`] = `
<div>
  <div>
    <div>
      Panel
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-forceRender 1`] = `
.c0 {
  display: none;
}

<div>
  <div>
    <div>
      Panel
    </div>
    <div
      class="c0"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-titlePosition 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class=""
        open=""
      >
        Content
      </div>
      <div>
        Panel
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-uncontrolled 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
